--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -3605,6 +3605,7 @@ background-image: linear-gradient(145deg, #6768ab 0%, #a297e5 100%);
 
         }
     .dorik-row-l7xuwdmg-wrapper {
+  width: 100%; 
 
 }
 .dorik-row-l7xuwdmg.flex {
@@ -3696,7 +3697,7 @@ color: rgba(255, 255, 255, 0.8);
 	}
 	
 /*Column*/
-.dorik-column-g3wrxy10 {
+.dorik-column-z33xygbf {
               text-align: left; 
   margin-top: 20px;
 
@@ -3716,7 +3717,7 @@ box-shadow: none;
     @media screen and (max-width: 1023px) {
                 
             }@media screen and (max-width: 767px) {
-                .dorik-column-g3wrxy10 {
+                .dorik-column-z33xygbf {
               padding-top: 40px;
   padding-bottom: 40px;
   padding-left: 20px;
@@ -3726,14 +3727,14 @@ box-shadow: none;
     
             }
 /*Accordion*/
-.dorik-accordion-h0j8egpn {
+.dorik-accordion-gzrpll4p {
             box-shadow: none;
 
         }
     
       
 
-      .dorik-accordion-h0j8egpn details {
+      .dorik-accordion-gzrpll4p details {
           background: #fff; 
   border-radius: 5px 5px 5px 5px; 
   border: 2px solid #F0F1FF; 
@@ -3744,18 +3745,18 @@ background-color: #F0F1FF;
         margin-bottom:20px
       }
 
-      .dorik-accordion-h0j8egpn details:last-child {
+      .dorik-accordion-gzrpll4p details:last-child {
         margin-bottom:0;
       }
 
-      .dorik-accordion-h0j8egpn summary {  
+      .dorik-accordion-gzrpll4p summary {  
         cursor: pointer;
         list-style: none;
         outline: none;
       }
 
       
-            .dorik-accordion-h0j8egpn summary {
+            .dorik-accordion-gzrpll4p summary {
                 background-color: #FFFFFF;
   font-size: 18px; 
   line-height: 20px; 
@@ -3771,25 +3772,25 @@ color: #2D314A;
             
         
 
-      .dorik-accordion-h0j8egpn summary::-webkit-details-marker {
+      .dorik-accordion-gzrpll4p summary::-webkit-details-marker {
         display: none;
       }
 
-      .dorik-accordion-h0j8egpn summary::before {
+      .dorik-accordion-gzrpll4p summary::before {
         padding-left: 10px;      
         font-size: inherit;
         content: '+';
         float: right;
       }
 
-      .dorik-accordion-h0j8egpn details[open] summary::before {
+      .dorik-accordion-gzrpll4p details[open] summary::before {
         padding-left: 10px;
         font-size: inherit;
         content: '-';
       }
 
       
-            .dorik-accordion-h0j8egpn .details-content p {
+            .dorik-accordion-gzrpll4p .details-content p {
                   padding-left: 20px;
   padding-right: 20px;
   padding-top: 10px;
@@ -3804,8 +3805,8 @@ color: #505056;
 
 /*Section*/
 .dorik-section-ce9qlplc {
-              padding-top: 20px;
-  padding-bottom: 20px;
+              padding-top: 10px;
+  padding-bottom: 10px;
 
         }
     
