--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -1534,7 +1534,7 @@ background-color: #ffffff;
               padding-top: 50px;
   padding-bottom: 150px;
 background-color: #ffffff;
-background-image: url("https://cdn.dorik.com/5f33bf53b3abd70011101bf4/625e4843180b790011866876/images/vinicius-amnx-amano-ALpEkP29Eys-unsplash_ccz0n4uo.jpg");
+background-image: url("https://durtsolutions.com/images/favicon_gijv2hfj.png");
   background-size: cover; 
   background-position: top; 
   background-repeat: no-repeat; 
