--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -1534,7 +1534,7 @@ background-color: #ffffff;
               padding-top: 50px;
   padding-bottom: 150px;
 background-color: #ffffff;
-background-image: url("https://durtsolutions.com/images/favicon_gijv2hfj.png");
+background-image: url("https://durtsolutions.com/images/headerhero.jpg");
   background-size: cover; 
   background-position: top; 
   background-repeat: no-repeat; 
